modified screen sizes for mobile and added a divider for scoreboard

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
     <section id="scorewrap">
         <div id="scoreboard">
-            <p><span id="score"></span><span> l 6</span></p>
+            <p><span id="score" ></span><img id="divider-bar" src="images/divider-bar.png"><span>6</span></p>
         </div>
     </section>
 
