--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>The Hangman</title>
+    <title>Fashion Hangman</title>
     <!-- Latest compiled and minified CSS -->
 
     <meta name=viewport content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -15,11 +15,11 @@
 <header>
     <img id="logo" src="images/logo.png" alt="The Hang Man Logo"/>
 </header>
-<div id="wrapper">
+<!--<div id="wrapper">
 <main>
 
 </main>
-</div>
+</div>-->
 <footer>
     <section id="words">
         <div id="question"></div>
