added input#dummy, & event handler for phone, or tab keyboard to show

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <p><span id="score" ></span><img id="divider-bar" src="images/divider-bar.png"><span>6</span></p>
         </div>
     </section>
+    <input id="dummy" type="text">
 
 </footer>
 
