uncommented #wrapper and main

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 <header>
     <img id="logo" src="images/logo.png" alt="The Hang Man Logo"/>
 </header>
-<!--<div id="wrapper">
+<!---->
+<div id="wrapper">
 <main>
 
 </main>
-</div>-->
+</div>
 <footer>
     <section id="words">
         <div id="question"></div>
