intro screen added

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 <div id="loser">
 
 </div>
+
+<div class="start_game">
+    <button id="start_btn">start game</button>
+</div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
