adjust window_screen and intro's pop-up

--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
 
 </div>
 
-<div class="start_game">
-    <button id="start_btn">start game</button>
+<div class="window_screen">
+    <div class="start_game">
+        <button id="start_btn">start game</button>
+    </div>
 </div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
